--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -12,6 +12,9 @@ ja:
       category: カテゴリー
     attributes:
       # 各モデルのカラム名を記載
+      category:
+        title: タイトル
+        description: 同じ説明
       content:
         title: タイトル
         about: 概要
